--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <title>worker class</title>
+        <title>worker prototype</title>
         <meta charset="utf-8">
 
     </head>
