main.js, render.js

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <script src="js/stack_3_class.js"></script>
     <script src="js/worker.js"></script>
     <script src="js/area.js"></script>
-    <script>
-
-    </script>
+    <script src="js/render.js"></script>
+    <script src="js/main.js"></script>
 
 </html>
