--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <h1>worker Module demo</h1>
         <p>This is a prototype for a worker class where certain values are set by how much they are getting payed, and how often they are working.</p>
 
+        <div id="gamearea">
+        </div>
+
     </body>
 
     <script src="js/stack_3_class.js"></script>
