--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js/worker.js"></script>
     <script src="js/area.js"></script>
     <script src="js/render.js"></script>
+    <script src="js/control.js"></script>
     <script src="js/main.js"></script>
 
 </html>
